syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.interledger.spsp.server.grpc";
package org.interledger.stream.proto;

import "asset_codes.proto";

// Return fields of a balance request
message GetBalanceResponse {

    string accountId = 1;
    AssetCode assetCode = 2;
    int32 assetScale = 3;
    int64 balance = 4;
}


